# client

./: .gitattributes  SYNC_PACKAGE_INFO.md  data.yml  package.json  pnpm-lock.yaml  user_data.yml  vite.config.ts
.cargo/: config.toml
docs/: global-dialog.md
src/: Home.tsx  Login.tsx  Windows.tsx  main.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: config.rs  data.rs  http.rs  lib.rs  logger.rs  main.rs  user_data.rs  utils.rs
src-tauri/src/login/: lib.rs  mod.rs  request.rs
src/components/: auth.tsx  global-dialog.tsx  protected-route.tsx  user-data-example.tsx  windows-control.tsx
src/hooks/: use-dialog.ts  use-login-state.ts
src/lib/: dialog-utils.ts  user-data.ts
src/lib/hooks/: use-user-data.ts
src/pages/: login.tsx
src/pages/home/: home.tsx  launcher.tsx  settings.tsx
src/types/: dialog.ts  router.ts
