[build-dependencies]
serde_json = "1"
toml = "0.8"

[build-dependencies.tauri-build]
features = []
version = "2"

[dependencies]
colored = "2.1"
dirs = "5.0"
md5 = "0.7"
once_cell = "1.19"
serde_json = "1"
serde_yaml = "0.9"
tauri-plugin-opener = "2"
toml = "0.8"
winconsole = "0.11.1"

[dependencies.chrono]
features = ["clock"]
version = "0.4"

[dependencies.reqwest]
features = [
    "json",
    "blocking",
]
version = "0.12"

[dependencies.serde]
features = ["derive"]
version = "1"

[dependencies.tauri]
features = []
version = "2"

[dependencies.tokio]
features = ["full"]
version = "1"

[dependencies.windows]
features = ["Win32_System_Console"]
version = "0.62.2"

[lib]
crate-type = [
    "staticlib",
    "cdylib",
    "rlib",
]
name = "client_lib"

[package]
authors = ["you"]
description = ""
edition = "2021"
name = "CLIENT"
version = "0.0.1"
